# glad-global-forest-change

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml  release.yml
docker/: Dockerfile  build  cibuild  console  lint  stac  test
docs/: example.ipynb
examples/: collection.json
examples/hansen-gfc-2023-v1.11-40N-080W/: hansen-gfc-2023-v1.11-40N-080W.json
scripts/: test  update-examples
src/stactools/glad_global_forest_change/: __init__.py  cogs.py  commands.py  constants.py  stac.py
tests/: test_cogs.py  test_commands.py  test_stac.py
